# AudioVideo

./: readme.md  settings.gradle
app/: build.gradle
codec/: CMakeLists.txt  build.gradle
codec/src/androidTest/java/edu/wuwang/codec/: ExampleInstrumentedTest.java
codec/src/main/: AndroidManifest.xml
codec/src/main/assets/shader/: yuv420sp.frag
codec/src/main/assets/shader/convert/: rgba_yuv.frag
codec/src/main/java/com/wuwang/jni/: DataConvert.java  GLExport.java
codec/src/main/java/edu/wuwang/codec/: MainActivity.java  NativeCodec.java
codec/src/main/jni/: Android.mk  Application.mk  Codec_jni.cpp  GLExport_jni.cpp  VideoConvert.cpp  decapi.h  glexport.cpp  glexport.h
codec/src/main/res/layout/: activity_camera.xml  activity_decode.xml  activity_gl_test.xml  activity_main.xml  activity_mp4_test.xml
codec/src/test/java/edu/wuwang/codec/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/edu/wuwang/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/assets/: test.aac  test.pcm
ffmpeg/src/main/assets/sd/: test.aac
ffmpeg/src/main/assets/shader/: yuv.frag
ffmpeg/src/main/cpp/: AACDecoder.cpp  AACDecoder.h  Codec.cpp  Codec.h  FFMpegLog.h  FFMpeg_jni.cpp  H264Decoder.cpp  H264Decoder.h  H264Encoder.h  Mp4Decoder.cpp  Mp4Decoder.h  androidlog.h
ffmpeg/src/main/cpp/test/: AACDecoder.cpp  AACDecoder.h  Codec.cpp  Codec.h  H264Decoder.h  H264Encoder.cpp  Mp4AACDecoder.cpp  Mp4AACDecoder.h  Mp4Decoder.cpp  Mp4Decoder.h  Mp4H264Decoder.cpp  Mp4H264Decoder.h
ffmpeg/src/main/res/layout/: activity_main.xml  demo_aacdecoder.xml  demo_base.xml  demo_h264decoder.xml
ffmpeg/src/main/res/values/: strings.xml
ffmpeg/src/main/st/: FFMpeg.cpp  FFMpeg.h  aydec.c  aydec.h  decode.c  decode.h  dlog.h  encode.c  encode.h  format.c  format.h  swscale.c  swscale.h  test.c  timer.c  timer.h
(+66 files in other folders)
